--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     network_mode: "host"
 
   postgres:
-    image: postgres
+    image: postgres:12.4
     container_name: subsocial-postgres
     restart: on-failure
     environment:
@@ -31,7 +31,9 @@ services:
       POSTGRES_PASSWORD: 1986
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    network_mode: "host"
+    ports:
+      - "5432:5432"
+    # network_mode: "host"
 
   pgadmin:
     image: dpage/pgadmin4
@@ -42,12 +44,30 @@ services:
       PGADMIN_DEFAULT_PASSWORD: "admin"
     network_mode: "host"
 
+  graphql-engine:
+    image: hasura/graphql-engine:v1.3.2
+    container_name: subsocial-hasura
+    depends_on:
+      - "postgres"
+    restart: on-failure
+    ports:
+      - "5050:8080"
+    environment:
+      HASURA_GRAPHQL_DATABASE_URL: postgres://dev:1986@postgres:5432/subsocial 
+      ## enable the console served by server
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
+      ## enable debugging mode. It is recommended to disable this in production
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+      ## uncomment next line to set an admin secret
+      ## HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+
 ## IPFS Cluster #################################
 #################################################
 
   ipfs0:
     image: ipfs/go-ipfs:v0.5.1
-    container_name: subsocial-ipfs0
+    container_name: subsocial-ipfs-node
     restart: on-failure
     ports:
       - "4001:4001"
@@ -58,13 +78,13 @@ services:
       - ./ipfs-data/daemon/data:/data/ipfs
 
   ipfs-cluster:
-    image: ipfs/ipfs-cluster:latest
+    image: ipfs/ipfs-cluster:v0.13.0
     container_name: subsocial-ipfs-cluster
     depends_on:
       - ipfs0
     environment:
       CLUSTER_PEERNAME: "Subsocial Cluster"
-      CLUSTER_SECRET: ${CLUSTER_SECRET} # From shell variable if set
+      CLUSTER_SECRET: "" # From shell variable if set
       CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs0/tcp/5001
       CLUSTER_CRDT_TRUSTERPEERS: '*' # Trust all peers in Cluster (initially)
       CLUSTER_RESTAPI_CORSALLOWEDORIGINS: '*'
@@ -75,30 +95,6 @@ services:
       # - "9096:9096"
     volumes:
       - ./ipfs-data/cluster:/data/ipfs-cluster
-
-#################################################
-
-  ipfs1:
-    image: ipfs/go-ipfs:v0.5.1
-    container_name: subsocial-ipfs1
-    restart: on-failure
-    volumes:
-      - peer_staging:/export
-      - peer_data:/data/ipfs
-
-  ipfs-peer:
-    image: ipfs/ipfs-cluster:latest
-    container_name: subsocial-ipfs-peer
-    depends_on:
-      - ipfs1
-    environment:
-      CLUSTER_PEERNAME: "Subsocial Peer"
-      CLUSTER_SECRET: ${CLUSTER_SECRET}
-      CLUSTER_IPFSHTTP_NODEMULTIADDRESS: /dns4/ipfs1/tcp/5001
-      CLUSTER_CRDT_TRUSTERPEERS: '*'
-      CLUSTER_MONITORPINGINTERVAL: 2s # Speed up peer discovery
-    volumes:
-      - peer_cluster:/data/ipfs-cluster
 
 #################################################
 #################################################
@@ -122,10 +118,4 @@ volumes:
   es_data:
     driver: local
   postgres_data:
-    driver: local
-  peer_staging:
-    driver: local
-  peer_data:
-    driver: local
-  peer_cluster:
     driver: local
